@@ -21,9 +21,7 @@ import co.edu.javeriana.caravana_medieval_cruz_f_ss.model.Ciudad;
 import co.edu.javeriana.caravana_medieval_cruz_f_ss.model.CiudadProducto;
 import co.edu.javeriana.caravana_medieval_cruz_f_ss.model.CiudadRuta;
 import co.edu.javeriana.caravana_medieval_cruz_f_ss.model.CiudadServicio;
-import co.edu.javeriana.caravana_medieval_cruz_f_ss.model.Producto;
 import co.edu.javeriana.caravana_medieval_cruz_f_ss.model.Ruta;
-import co.edu.javeriana.caravana_medieval_cruz_f_ss.model.Servicio;
 import co.edu.javeriana.caravana_medieval_cruz_f_ss.repository.CiudadProductoRepository;
 import co.edu.javeriana.caravana_medieval_cruz_f_ss.repository.CiudadRepository;
 import co.edu.javeriana.caravana_medieval_cruz_f_ss.repository.CiudadRutaRepository;
@@ -56,26 +54,29 @@ public class CiudadService {
     @Autowired
     private RutaRepository rutaRepository;
 
-
-    public CiudadDTO crearCiudad(Ciudad ciudad) {
+    public CiudadDTO crearCiudad(CiudadFormularioDTO dto) {
+        Ciudad ciudad = new Ciudad();
+        ciudad.setNombreCiudad(dto.getNombreCiudad());
+        ciudad.setImpuestosDeEntradaCiudad(dto.getImpuestosDeEntradaCiudad());
         return CiudadMapper.toDTO(ciudadRepository.save(ciudad));
     }
 
     public CiudadDetalleDTO buscarCiudadPorId(Long id) {
         Ciudad ciudad = ciudadRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
+            .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
         return CiudadMapper.toDetalle(ciudad);
     }
 
     public List<CiudadDTO> listarCiudades() {
         return ciudadRepository.findAll().stream()
-                .map(CiudadMapper::toDTO)
-                .collect(Collectors.toList());
+            .map(CiudadMapper::toDTO)
+            .collect(Collectors.toList());
     }
 
+    @Transactional
     public CiudadDTO actualizarCiudadDesdeFormulario(Long id, CiudadFormularioDTO dto) {
         Ciudad ciudad = ciudadRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
+            .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
 
         ciudad.setNombreCiudad(dto.getNombreCiudad());
         ciudad.setImpuestosDeEntradaCiudad(dto.getImpuestosDeEntradaCiudad());
@@ -84,99 +85,81 @@ public class CiudadService {
     }
 
     @Transactional
-    public void actualizarCiudadConAsociaciones(Long id,
-            CiudadFormularioDTO dto,
-            List<Long> productoIds,
-            List<Long> servicioIds,
-            List<Long> rutaIds) {
-
+    public void actualizarCiudadConAsociaciones(Long id, CiudadFormularioDTO dto) {
         Ciudad ciudad = ciudadRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
+            .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
 
-        // Actualizar campos básicos
         ciudad.setNombreCiudad(dto.getNombreCiudad());
         ciudad.setImpuestosDeEntradaCiudad(dto.getImpuestosDeEntradaCiudad());
 
-        // Actualizar productos asociados
-        ciudad.getProductosDisponibles().clear();
-        if (productoIds != null) {
-            List<CiudadProducto> nuevosProductos = productoIds.stream()
-                    .map(pid -> {
-                        Producto producto = productoRepository.findById(pid)
-                                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
-                        return new CiudadProducto(ciudad, producto, 0);
-                    })
-                    .toList();
-            ciudad.getProductosDisponibles().addAll(nuevosProductos);
+        ciudadProductoRepository.deleteAll(ciudad.getProductosDisponibles());
+        ciudadServicioRepository.deleteAll(ciudad.getServiciosDisponibles());
+        ciudadRutaRepository.deleteAll(ciudad.getRutasAsociadas());
+
+        if (dto.getProductoIds() != null) {
+            List<CiudadProducto> nuevos = dto.getProductoIds().stream()
+                .map(pid -> new CiudadProducto(ciudad, productoRepository.findById(pid)
+                        .orElseThrow(() -> new RuntimeException("Producto no encontrado")), 0))
+                .collect(Collectors.toList());
+            ciudadProductoRepository.saveAll(nuevos);
         }
 
-        // Actualizar servicios asociados
-        ciudad.getServiciosDisponibles().clear();
-        if (servicioIds != null) {
-            List<CiudadServicio> nuevosServicios = servicioIds.stream()
-                    .map(sid -> {
-                        Servicio servicio = servicioRepository.findById(sid)
-                                .orElseThrow(() -> new RuntimeException("Servicio no encontrado"));
-                        return new CiudadServicio(ciudad, servicio);
-                    })
-                    .toList();
-            ciudad.getServiciosDisponibles().addAll(nuevosServicios);
+        if (dto.getServicioIds() != null) {
+            List<CiudadServicio> nuevos = dto.getServicioIds().stream()
+                .map(sid -> new CiudadServicio(ciudad, servicioRepository.findById(sid)
+                        .orElseThrow(() -> new RuntimeException("Servicio no encontrado"))))
+                .collect(Collectors.toList());
+            ciudadServicioRepository.saveAll(nuevos);
         }
 
-        // Actualizar rutas asociadas
-        ciudad.getRutasOrigen().clear();
-        if (rutaIds != null) {
-            List<CiudadRuta> nuevasRutas = rutaIds.stream()
-                    .map(rid -> {
-                        Ruta ruta = rutaRepository.findById(rid)
-                                .orElseThrow(() -> new RuntimeException("Ruta no encontrada"));
-                        return new CiudadRuta(ciudad, ruta);
-                    })
-                    .toList();
-            ciudad.getRutasOrigen().addAll(nuevasRutas);
+        if (dto.getRutaIds() != null) {
+            List<CiudadRuta> nuevas = dto.getRutaIds().stream()
+                .map(rid -> {
+                    Ruta ruta = rutaRepository.findById(rid)
+                        .orElseThrow(() -> new RuntimeException("Ruta no encontrada"));
+                    return new CiudadRuta(ciudad, ruta.getCiudadDestino(), ruta.getCiudadOrigen(), ruta);
+                })
+                .collect(Collectors.toList());
+            ciudadRutaRepository.saveAll(nuevas);
         }
-
-        ciudadRepository.save(ciudad);
     }
 
     @Transactional
     public void eliminarCiudad(Long id) {
         Ciudad ciudad = ciudadRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
+            .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
 
         ciudadProductoRepository.deleteAll(ciudad.getProductosDisponibles());
         ciudadServicioRepository.deleteAll(ciudad.getServiciosDisponibles());
-        ciudadRutaRepository.deleteAll(ciudad.getRutasAsociadas()); // <--- esta es la lista correcta
+        ciudadRutaRepository.deleteAll(ciudad.getRutasAsociadas());
 
         ciudadRepository.delete(ciudad);
     }
 
     public List<CiudadProductoDTO> obtenerProductos(Long ciudadId) {
         Ciudad ciudad = ciudadRepository.findById(ciudadId)
-                .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
+            .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
 
         return ciudad.getProductosDisponibles().stream()
-                .map(CiudadProductoMapper::toDTO)
-                .collect(Collectors.toList());
+            .map(CiudadProductoMapper::toDTO)
+            .collect(Collectors.toList());
     }
 
     public List<CiudadServicioDTO> obtenerServicios(Long ciudadId) {
         Ciudad ciudad = ciudadRepository.findById(ciudadId)
-                .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
+            .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
 
         return ciudad.getServiciosDisponibles().stream()
-                .map(CiudadServicioMapper::toDTO)
-                .collect(Collectors.toList());
+            .map(CiudadServicioMapper::toDTO)
+            .collect(Collectors.toList());
     }
 
     public List<CiudadRutaDTO> obtenerRutas(Long ciudadId) {
         Ciudad ciudad = ciudadRepository.findById(ciudadId)
-                .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
+            .orElseThrow(() -> new RuntimeException("Ciudad no encontrada"));
 
         return ciudad.getRutasAsociadas().stream()
-                .map(CiudadRutaMapper::toDTO)
-                .collect(Collectors.toList());
-
+            .map(CiudadRutaMapper::toDTO)
+            .collect(Collectors.toList());
     }
-
 }
